Fixng layout issues

--- a/src/components/storyblok/NavDefault/NavDefault.css
+++ b/src/components/storyblok/NavDefault/NavDefault.css
@@ -1,7 +1,7 @@
 @scope {
   & {
     background-color: var(--nav-background, var(--light-100));
-    display: var(--nav-display, none);
+    display: var(--nav-display, grid);
     gap: var(--spacing-base);
     grid-auto-flow: var(--nav-auto-flow, row);
     grid-column: nav;
@@ -15,8 +15,34 @@
     top: var(--nav-top, anchor(bottom));
     z-index: 1;
 
-    &:not([hidden]) {
-      --nav-display: grid;
+    @media screen and (width < 1480px) {
+      opacity: 1;
+      transform: translateX(0);
+      visibility: visible;
+      pointer-events: auto;
+      transition:
+        opacity 0.3s ease-in-out,
+        transform 0.3s ease-in-out,
+        visibility 0.3s ease-in-out;
+
+      @starting-style {
+        opacity: 0;
+        transform: translateX(-10px);
+        visibility: hidden;
+      }
+
+      &[hidden] {
+        opacity: 0;
+        transform: translateX(-10px);
+        visibility: hidden;
+        pointer-events: none;
+      }
+    }
+
+    &[hidden] {
+      @media screen and (width >= 1480px) {
+        --nav-display: none;
+      }
     }
 
     @media screen and (width >= 1480px) {
